# pillow-dat

./: README.md  draft.py  environment.yml  main.py  pyproject.toml
.github/: logo.excalidraw
PIL_DAT/: Image.py  _dat_arch.py  dat_2.py  dat_base.py  dat_light.py  dat_model.py  dat_s.py
basicsr/archs/: arch_util.py  dat_arch.py  vgg_arch.py
basicsr/data/: data_util.py  paired_image_dataset.py  single_image_dataset.py  transforms.py
basicsr/metrics/: psnr_ssim.py
basicsr/models/: sr_model.py
basicsr/utils/: img_util.py  logger.py  options.py
benchmarks/: benchmark_alpha_channel_awareness_dat_light.py  benchmark_alpha_channel_awareness_edsr.py  benchmark_quality_edsr.py  benchmark_speed_dat_light.py  benchmark_speed_edsr.py
examples/: example.py  example_custom_model.py
examples/PIL_DAT/: example.py  example_custom_model.py
pillow-dat/: README.md  pyproject.toml
pillow-dat/pillow_dat/PIL_DAT/: dat_2.py  dat_base.py  dat_s.py
pillow-dat/tests/PIL_DAT/: test_dat_model.py
pillow_dat/PIL_DAT/: Image.py  dat_light.py
src/PIL_DAT/: Image.py  dat_2.py  dat_base.py  dat_light.py  dat_model.py  dat_s.py
tests/: test_dat_model.py
tests/PIL_DAT/: test_dat_light.py  test_dat_model.py
