[tool.poetry]
name = "pillow-dat"
version = "0.1.0"
description = "PIL × DAT - Pillow extension for AI-based image upscaling."
authors = ["iLoveDataJjia <ilovedata.jjia@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pillow_dat"}]

[tool.poetry.dependencies]
python = "^3.11"
einops = "^0.7.0"
pillow = "^10.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
